feat(ui): managed by column
